syntax = "proto3";

option go_package = "./proto";

package users;

service UserService {
    rpc GetUserDetails (UserIdRequest) returns (User);
    rpc GetUserDetailsByIDs (stream UserIdListRequest) returns (stream UsersList);
}

message UserIdRequest {
    int32 id = 1;
}

message User {
    int32 id = 1;
    string fname = 2;
    string city = 3;
    int64 phone = 4;
    double height = 5;
    bool married = 6;
}

message UserIdListRequest{
    repeated int32 id = 1;
}

message UsersList{
    repeated User user = 1;
}
